# Sales-Data-Analysis-and-Future-Sales-Prediction

./: .gitignore  Analysis.ipynb  README.md  pyproject.toml  requirements.txt  sales_data.xlsx
models/: sarimax_consumer.json  sarimax_corporate.json  sarimax_home_office.json
src/sales_forecast/: __init__.py  cli.py  config.py  data.py  model.py
