[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sales-forecast"
version = "0.1.0"
description = "Sales data analysis and segment-wise SARIMAX forecasting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "openpyxl>=3.1",
  "statsmodels>=0.14",
  "scikit-learn>=1.3"
]

[project.scripts]
sales-forecast = "sales_forecast.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
